--- a/hello-002/index0.html
+++ b/hello-002/index0.html
@@ -6,6 +6,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="../css/clear.css" />
     <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/nav.css" />
+    <script src="./js/nav.js"></script>
   </head>
   <body>
     <header class="main">
@@ -17,8 +19,8 @@
         <p>나의 홈페이지에 오신 것을 환영합니다</p>
       </div>
       <div>
-        <a href="#">로그인</a>
-        <a href="#">회원가입</a>
+        <a href="./login.html">로그인</a>
+        <a href="./join.html">회원가입</a>
       </div>
     </header>
     <nav class="main">
